# recorder-service

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: test-build-and-publish.yaml
recorder_service/: config.py
recorder_service/api/: api.py
recorder_service/core/: __init__.py  recorder_service.py  storage.py  storage_service.py  video_source.py
recorder_service/storage/: __init__.py  local_filesystem_storage.py
recorder_service/video/: __init__.py  local_video_source.py
tests/: e2e_test.py  test_core_recorder_service.py  test_local_filesystem_storage.py  test_local_video_source.py
