[tool.poetry]
name = "recorder-service"
version = "0.1.0"
description = ""
authors = ["Jan Kielmann <jnkielmann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.353"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
